--- a/internproject01/package.json
+++ b/internproject01/package.json
@@ -14,6 +14,7 @@
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-drag-drop-files": "^2.4.0",
     "react-form-buddy": "^1.0.0",
     "zustand": "^5.0.1"
   },
